src/test/deca/context/invalid/created/acces_field/acces_field_method.deca
// Description :
//    acces à un field sur l'identificateur
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 :(3.65) Le membre gauche n’est pas de type ‘classe’


class A {
int meth(){}
}

{
A a = new A();
(a.meth()).x;
}